--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^8.0.1",
-    "commander": "^14.0.2"
+    "commander": "^14.0.2",
+    "consola": "^3.4.2"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
