License and readme files have been added

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "ui5-ultima",
   "version": "1.0.0",
-  "description": "UI5 Ultima is a CLI tool to generate free-style SAPUI5 applications with TypeScript. The UI5 Ultima comes with some useful built-in SAPUI5 classes.",
+  "description": "UI5 Ultima is a CLI tool to generate free-style SAPUI5 applications and artifacts with TypeScript. The UI5 Ultima comes with some useful built-in SAPUI5 classes.",
   "keywords": [
     "sapui5",
     "generator",
     "typescript"
   ],
-  "author": "hasanciftcii26@gmail.com",
-  "license": "UNLICENSED",
+  "author": "Hasan Çiftçi (hasanciftcii26@gmail.com)",
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/hasanciftci26/ui5-ultima"
+  },
+  "homepage": "https://github.com/hasanciftci26/ui5-ultima",
   "bin": "dist/cli.js",
   "files": [
     "dist",
