Github actions update for auto version increase

--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -7,7 +7,7 @@ on:
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
 
 jobs:
   publish:
@@ -30,6 +30,19 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Bump version (patch)
+        run: |
+          npm version patch -m "chore(release): %s"
+        env:
+          GIT_COMMITTER_NAME: github-actions
+          GIT_COMMITTER_EMAIL: github-actions@github.com
+          GIT_AUTHOR_NAME: github-actions
+          GIT_AUTHOR_EMAIL: github-actions@github.com
+
+      - name: Push tags
+        run: |
+          git push --follow-tags        
 
       - name: Publish
         run: npm publish
